--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <th>Word</th>
       </tr>
       <tr>
-        <td>52</td>
-        <td>word1</td>
+        <td>placeholder1</td>
+        <td>placeholder1</td>
       </tr>
       <tr>
-        <td>1412131</td>
-        <td>word2</td>
+        <td>placeholder1</td>
+        <td>placeholder1</td>
       </tr>
     </table>
 
