--- a/index_main.html
+++ b/index_main.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <title>FWT</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+    .clr1{ color: #F00; }
+    .clr1{ color: #000; }
+    </style>
   </head>
   <body>
 
@@ -36,6 +40,13 @@
         <li>highlight differences in two texts</li>
       </ul>
     </ul>
+
+    <textarea id = "ta" name="ta" onkeyup="clean('ta')" onkeydown="clean('ta')"> HA! </textarea>
+    <br>
+    <div id="status"></div>
+
+    </div>
+    <br>
 
     <textarea id="mainUserText" placeholder="Enter your text here..." autofocus>
 
