--- a/index_main.html
+++ b/index_main.html
@@ -34,6 +34,8 @@
       <li>flashcards ? </li>
       <li>highlight repeated words in the text while typing</li>
       <li>useful VBA/Excel macros for text processing</li>
+      <li>inventory localization</li>
+      <li>grid inventory / item</li>
       <ul>
         <li>row/column highlight</li>
         <li>bold a specific word</li>
