--- a/index_main.html
+++ b/index_main.html
@@ -36,6 +36,10 @@
       <li>useful VBA/Excel macros for text processing</li>
       <li>inventory localization</li>
       <li>grid inventory / item</li>
+      <li>symantic maps</li>
+      <li>logic trees</li>
+      <li>dictionaries{key:value}</li>
+      <li>?</li>
       <ul>
         <li>row/column highlight</li>
         <li>bold a specific word</li>
