--- a/index_main.html
+++ b/index_main.html
@@ -35,7 +35,7 @@
       <li>highlight repeated words in the text while typing</li>
       <li>useful VBA/Excel macros for text processing</li>
       <li>inventory localization</li>
-      <li>grid inventory / item</li>
+      <li>grid inventory / item / buff or moodlet and localize it</li>
       <li>symantic maps</li>
       <li>logic trees</li>
       <li>dictionaries{key:value}</li>
