--- a/index_main.html
+++ b/index_main.html
@@ -38,6 +38,7 @@
       <li>grid inventory / item / buff or moodlet and localize it</li>
       <li>symantic maps</li>
       <li>logic trees</li>
+      <li>мультяшный/пиксельный персонаж в углу экрана с облачком текста, который переводится в зависимоси от выбранного языка</li>
       <li>dictionaries{key:value}</li>
       <li>?</li>
       <ul>
